Add basic HTML structure with redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=flow-journal.html">
+    <title>心流存摺</title>
+</head>
+<body>
+    <p>正在載入心流存摺...</p>
+    <p>如果沒有自動跳轉，請點擊 <a href="flow-journal.html">這裡</a></p>
+</body>
+</html>
